--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
     
             <div class="container main-box position-absolute top-50">
-                <div class="row h-100 ">
+                <div class="row h-100 overflow-hidden  ">
                     <div class="col-4  p-0 h-100  ">
                         <header class="d-flex align-items-center justify-content-between py-1 ">
                             <div class=" d-flex align-items-center p-2 ">
@@ -74,9 +74,9 @@
                                 <input class="search-input" placeholder="Cerca o inizia una nuova chat" type="text">
                             </div>
 
-                            <ul class="chat-scroll">
-                                <li v-for="(elem) in contacts" @click = "clickedChat(clickedContacts)">
-                                    <div class="d-flex justify-content-between ">
+                            <ul class="chat-scroll overflow-scroll">
+                                <li v-for="(elem, i) in contacts" @click = "clickedChat(i)" :class = "(i == clickedContacts) ? 'active' : '' ">
+                                    <div class="d-flex justify-content-between py-3   ">
                                         <div class=" d-flex justify-content-between">
 
                                             <div class="user-img">
@@ -109,11 +109,11 @@
                         <header class="d-flex align-items-center justify-content-between py-1 ">
                             <div class=" d-flex align-items-center p-2">
                                 <div class="user-img">
-                                    <img src="./img/avatar_1.jpg" alt="">
+                                    <img :src="contacts[clickedContacts].avatar" alt="">
                                 </div>
                                 <div class="">
                                     <h6>
-                                        Michele
+                                        {{contacts[clickedContacts].name}}
                                     </h6>
                                     <span class="text-muted ">Ultimo accesso oggi alle 12:00</span>
                                 </div>
@@ -143,7 +143,7 @@
                                     <button class=" px-2 ">
                                         <i class="fa-regular fa-face-smile"></i>
                                     </button>
-                                    <input class="search-input" placeholder="Scrivi un messaggio" type="text">
+                                    <input class="search-input" v-model="newMessage" @keyup.enter="userMessage()" placeholder="Scrivi un messaggio" type="text">
                                     <button class="px-2 ">
                                         <i class="fa-solid fa-microphone"></i>
                                     </button>
